Wed Aug 27 17:25:48 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Event_Handler.h:
          When we enable ACE::make_event_handler<T> we set
          the define ACE_HAS_ACE_MAKE_EVENT_HANDLER so that a higher
          layer can easily check if this factory template is
          available

        * tests/Compiler_Features_32_Test.cpp:
          Extended this C++11 unit test

Fri Aug 22 15:51:48 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Caching_Strategies_T.cpp:
          Fix the include guard macro.

Fri Aug 22 06:40:36 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Excluded one other debug macro

Tue Aug  5 21:49:12 UTC 2014  Steve Huston  <shuston@riverace.com>

        * ace/Process.cpp (setenv): Use the correct format string for
          non-Windows wide-char builds. Fixes Bugzilla 4176.

        * ace/OS_NS_stdio.inl (vsnprintf): When trying to adapt C99 vswprintf
          to return a required destination memory area, don't be fooled by a
          real error such as formatting errors. Fixes Bugzilla 4177.

Tue Aug  5 17:14:04 UTC 2014  Steve Huston  <shuston@riverace.com>

        * ace/Process.cpp (setenv): Correctly re-process variable arg list if
          first attempt at formatting the value(s) fails due to lack of
          space. Fixes Bugzilla 4175.

        * tests/Process_Test.cpp: Add test for the above problem. The setenv
          test can run everywhere, as opposed to the spawning/file-checking
          which can only run on Linux.

Sat Aug  2 17:35:09 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_assert.h:
        * ace/os_include/os_byteswap.h:
        * ace/os_include/os_complex.h:
        * ace/os_include/os_cpio.h:
        * ace/os_include/os_fenv.h:
        * ace/os_include/os_float.h:
        * ace/os_include/os_fmtmsg.h:
        * ace/os_include/os_fnmatch.h:
        * ace/os_include/os_ftw.h: